Fixing pagination not showing due to being placed in a white background

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -121,6 +121,12 @@
   max-width: 30ch;
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .center {
   display: flex;
   justify-content: center;
